--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+body {
+  background-color: Black;
+}
 
 @theme inline {
   --color-background: var(--background);
